--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,7 @@
     "permissions": ["tabs"],
     "browser_action": {
         "default_icon": "icon/icon.png",
-        "default_title": "niconicoamp"
+        "default_title": "PlainPauseAndPlay"
     },
     "web_accessible_resources": [
         "icon/*"
