--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     },
     "content_scripts": [
         {
-            "matches": ["http://www.nicovideo.jp/watch/*", "https://www.youtube.com/watch*"],
+            "matches": ["http://www.nicovideo.jp/watch/*", "https://www.youtube.com/*"],
             "js": ["ppap.js"]
         }
     ],
